--- a/MP/Views/Home/TripContent.cshtml
+++ b/MP/Views/Home/TripContent.cshtml
@@ -72,9 +72,10 @@
                     </div>
                 </div>
             </div>
-            <div class="row">
-                <div class="col-md-12 padding-5px" id="departureInfoLabel">
-                </div>
+            <div id="printScreen" class="container">
+                <div class="row">
+                    <div class="col-md-12 padding-5px" id="departureInfoLabel">
+                    </div>
                     <div class="col-md-6 padding-5px">
                         <a href="#" class="thumbnail seat-number" data-toggle="modal" data-seat-number="0" data-target="#tripContentModal">
                             <span class="label label-danger">Tài xế</span>
@@ -87,56 +88,57 @@
                     </div>
                 </div>
 
-            <div class="row" id="testcase">
-                <div class="col-md-3 padding-5px">
-                    <a href="#" class="thumbnail seat-number" data-toggle="modal" data-seat-number="2" data-target="#tripContentModal">
-                        <span class="label label-success">2</span>
-                        <span class="seat-number-2"></span>
-                    </a>
+                <div class="row">
+                    <div class="col-md-3 padding-5px">
+                        <a href="#" class="thumbnail seat-number" data-toggle="modal" data-seat-number="2" data-target="#tripContentModal">
+                            <span class="label label-success">2</span>
+                            <span class="seat-number-2"></span>
+                        </a>
+                    </div>
+                    <div class="col-md-3 padding-5px">
+                        <a href="#" class="thumbnail seat-number" data-toggle="modal" data-seat-number="3" data-target="#tripContentModal">
+                            <span class="label label-success">3</span>
+                            <span class="seat-number-3"></span>
+                        </a>
+                    </div>
+                    <div class="col-md-3 padding-5px">
+                        <a href="#" class="thumbnail seat-number" data-toggle="modal" data-seat-number="4" data-target="#tripContentModal">
+                            <span class="label label-success">4</span>
+                            <span class="seat-number-4"></span>
+                        </a>
+                    </div>
+                    <div class="col-md-3 padding-5px">
+                        <a href="#" class="thumbnail seat-number" data-toggle="modal" data-seat-number="5" data-target="#tripContentModal">
+                            <span class="label label-success">5</span>
+                            <span class="seat-number-5"></span>
+                        </a>
+                    </div>
                 </div>
-                <div class="col-md-3 padding-5px">
-                    <a href="#" class="thumbnail seat-number" data-toggle="modal" data-seat-number="3" data-target="#tripContentModal">
-                        <span class="label label-success">3</span>
-                        <span class="seat-number-3"></span>
-                    </a>
-                </div>
-                <div class="col-md-3 padding-5px">
-                    <a href="#" class="thumbnail seat-number" data-toggle="modal" data-seat-number="4" data-target="#tripContentModal">
-                        <span class="label label-success">4</span>
-                        <span class="seat-number-4"></span>
-                    </a>
-                </div>
-                <div class="col-md-3 padding-5px">
-                    <a href="#" class="thumbnail seat-number" data-toggle="modal" data-seat-number="5" data-target="#tripContentModal">
-                        <span class="label label-success">5</span>
-                        <span class="seat-number-5"></span>
-                    </a>
-                </div>
-            </div>
             
-            <div class="row">
-                <div class="col-md-3 padding-5px">
-                    <a href="#" class="thumbnail seat-number" data-toggle="modal" data-seat-number="6" data-target="#tripContentModal">
-                        <span class="label label-success">6</span>
-                        <span class="seat-number-6"></span>
-                    </a>
-                </div>
-                <div class="col-md-3 padding-5px">
-                    <a href="#" class="thumbnail seat-number" data-toggle="modal" data-seat-number="7" data-target="#tripContentModal">
-                        <span class="label label-success">7</span>
-                        <span class="seat-number-7"></span>
-                    </a>
-                </div>
-                <div class="col-md-3 padding-5px">
-                    <a href="#" class="thumbnail seat-number" data-toggle="modal" data-seat-number="8" data-target="#tripContentModal">
-                        <span class="label label-success">8</span>
-                        <span class="seat-number-8"></span>
-                    </a>
-                </div>
-                <div class="col-md-3 padding-5px">
-                    <a href="#" class="thumbnail seat-number" data-toggle="modal" data-seat-number="0" data-target="#tripContentModal">
-                        <span class="label label-warning">Cửa</span>
-                    </a>
+                <div class="row">
+                    <div class="col-md-3 padding-5px">
+                        <a href="#" class="thumbnail seat-number" data-toggle="modal" data-seat-number="6" data-target="#tripContentModal">
+                            <span class="label label-success">6</span>
+                            <span class="seat-number-6"></span>
+                        </a>
+                    </div>
+                    <div class="col-md-3 padding-5px">
+                        <a href="#" class="thumbnail seat-number" data-toggle="modal" data-seat-number="7" data-target="#tripContentModal">
+                            <span class="label label-success">7</span>
+                            <span class="seat-number-7"></span>
+                        </a>
+                    </div>
+                    <div class="col-md-3 padding-5px">
+                        <a href="#" class="thumbnail seat-number" data-toggle="modal" data-seat-number="8" data-target="#tripContentModal">
+                            <span class="label label-success">8</span>
+                            <span class="seat-number-8"></span>
+                        </a>
+                    </div>
+                    <div class="col-md-3 padding-5px">
+                        <a href="#" class="thumbnail seat-number" data-toggle="modal" data-seat-number="0" data-target="#tripContentModal">
+                            <span class="label label-warning">Cửa</span>
+                        </a>
+                    </div>
                 </div>
             </div>
         </div>
@@ -213,4 +215,3 @@
         </div>
     </div>
 </div>
-<div id="bypassme"></div>
