--- a/MP/Views/Home/TripContent.cshtml
+++ b/MP/Views/Home/TripContent.cshtml
@@ -2,6 +2,47 @@
 @model MP.Model.Models.Trip
 @{
     ViewBag.Title = "TripContent";
+    var tripName = Model.TripName == TripName.MA ? "Mỹ An - Sài Gòn" : "Sài Gòn - Mỹ An";
+    var maList = new List<object>
+                 {
+                     new {Text = "3:00", Value = DepartureTime.C300},
+                     new {Text = "5:30", Value = DepartureTime.C530},
+                     new {Text = "7:00", Value = DepartureTime.C700},
+                     new {Text = "9:00", Value = DepartureTime.C900},
+                     new {Text = "11:30", Value = DepartureTime.C1130},
+                     new {Text = "13:30", Value = DepartureTime.C1330},
+                     new {Text = "15:00", Value = DepartureTime.C1500}
+                 };
+    var maSelectList = new SelectList(maList, "Value", "Text");
+    var sgList = new List<object>
+                 {
+                     new {Text = "7:00", Value = DepartureTime.C700},
+                     new {Text = "8:30", Value = DepartureTime.C830},
+                     new {Text = "10:30", Value = DepartureTime.C1030},
+                     new {Text = "12:30", Value = DepartureTime.C1230},
+                     new {Text = "14:00", Value = DepartureTime.C1400},
+                     new {Text = "15:30", Value = DepartureTime.C1530},
+                     new {Text = "17:00", Value = DepartureTime.C1700}
+                 };
+    var sgSelectList = new SelectList(sgList, "Value", "Text");
+    var townList = new List<object>
+                 {
+                     new {Text = "Dọc đường", Value = Town.DD},
+                     new {Text = "Trường Xuân", Value = Town.TX},
+                     new {Text = "Mỹ Hòa", Value = Town.MH},
+                     new {Text = "Tân Kiều", Value = Town.TK},
+                     new {Text = "Gò Tháp", Value = Town.GT},
+                     new {Text = "Chợ Mới", Value = Town.CM},
+                     new {Text = "Chợ Cũ", Value = Town.CC},
+                     new {Text = "N2", Value = Town.N2},
+                     new {Text = "Mỹ Đông", Value = Town.MD},
+                     new {Text = "Mỹ Đông Huyện Ủy", Value = Town.MDHU},
+                     new {Text = "Láng Biển", Value = Town.LB},
+                     new {Text = "Mỹ Quý", Value = Town.MQ},
+                     new {Text = "Đường Thét", Value = Town.DT}
+                 };
+    var townSelectList = new SelectList(townList, "Value", "Text");
+    var nowTime = Int32.Parse(DateTime.Now.Hour + "" + DateTime.Now.Minute);
 }
 <div class="tabbable">
     <ul class="nav nav-tabs nav-justified">
@@ -18,55 +59,23 @@
                             <button type="button" class="btn btn-default"><span class="glyphicon glyphicon-arrow-left"></span></button>
                             <button type="button" class="btn btn-default"><span class="glyphicon glyphicon-arrow-right"></span></button>
                         </div>
-                        <input type="text" id="departureDateDatePicker" class="datepicker" value="@String.Format("{0:dd/MM/yyyy}", DateTime.Now)" />
+                        <input type="text" id="departureDateDatePicker" value="@String.Format("{0:dd/MM/yyyy}", DateTime.Now)" />
                         <div class="btn-group" data-toggle="buttons" id="departureTimeButtonGroup">
-                            @if (Model.TripName == TripName.MA)
-                            {
-                                <label class="btn btn-primary">
-                                    <input type="radio" name="departuretimes" value="@DepartureTime.C300"> 3:00
-                                </label>
-                                <label class="btn btn-primary">
-                                    <input type="radio" name="departuretimes" value="@DepartureTime.C530"> 5:30
-                                </label>
-                                <label class="btn btn-primary">
-                                    <input type="radio" name="departuretimes" value="@DepartureTime.C700"> 7:00
-                                </label>
-                                <label class="btn btn-primary">
-                                    <input type="radio" name="departuretimes" value="@DepartureTime.C900"> 9:00
-                                </label>
-                                <label class="btn btn-primary">
-                                    <input type="radio" name="departuretimes" value="@DepartureTime.C1130"> 11:30
-                                </label>
-                                <label class="btn btn-primary">
-                                    <input type="radio" name="departuretimes" value="@DepartureTime.C1330"> 13:30
-                                </label>
-                                <label class="btn btn-primary">
-                                    <input type="radio" name="departuretimes" value="@DepartureTime.C1500"> 15:00
-                                </label>
-                            }
-                            else
-                            {
-                                <label class="btn btn-primary">
-                                    <input type="radio" name="departuretimes" value="@DepartureTime.C700"> 7:00
-                                </label>
-                                <label class="btn btn-primary">
-                                    <input type="radio" name="departuretimes" value="@DepartureTime.C830"> 8:30
-                                </label>
-                                <label class="btn btn-primary">
-                                    <input type="radio" name="departuretimes" value="@DepartureTime.C1030"> 10:30
-                                </label>
-                                <label class="btn btn-primary">
-                                    <input type="radio" name="departuretimes" value="@DepartureTime.C1230"> 12:30
-                                </label>
-                                <label class="btn btn-primary">
-                                    <input type="radio" name="departuretimes" value="@DepartureTime.C1400"> 14:00
-                                </label>
-                                <label class="btn btn-primary">
-                                    <input type="radio" name="departuretimes" value="@DepartureTime.C1530"> 15:30
-                                </label>
-                                <label class="btn btn-primary">
-                                    <input type="radio" name="departuretimes" value="@DepartureTime.C1700"> 17:00
-                                </label>
+                            @{
+                                var selectList = Model.TripName == TripName.MA ? maSelectList : sgSelectList;
+                                bool actived = false;
+                                foreach (var item in selectList)
+                                {
+                                    var active = "";
+                                    if (Int32.Parse(item.Text.Replace(":", "")) > nowTime && !actived)
+                                    {
+                                        active = "active";
+                                        actived = true;
+                                    }
+                                    <label class="btn btn-primary @active">
+                                        <input type="radio" name="departuretimes" value="@item.Value"> @item.Text
+                                    </label>
+                                }
                             }
                         </div>
                     </div>
@@ -74,16 +83,19 @@
             </div>
             <div id="printScreen" class="container">
                 <div class="row">
-                    <div class="col-md-12 padding-5px" id="departureInfoLabel">
+                    <input type="hidden" id="tripName" value="@tripName" />
+                    <div class="col-md-8 padding-5px" id="departureInfoLabel">
                     </div>
                     <div class="col-md-6 padding-5px">
-                        <a href="#" class="thumbnail seat-number" data-toggle="modal" data-seat-number="0" data-target="#tripContentModal">
-                            <span class="label label-danger">Tài xế</span>
-                        </a>
+                        <div class="thumbnail seat-number">
+                            <span class="label label-default">Tài xế</span>
+                            <span></span>
+                        </div>
                     </div>
                     <div class="col-md-6 padding-5px">
                         <a href="#" class="thumbnail seat-number" data-toggle="modal" data-seat-number="1" data-target="#tripContentModal">
-                            <span class="label label-success">1</span>
+                            <span class="label label-default">1</span>
+                            <span class="seat-number-1"></span>
                         </a>
                     </div>
                 </div>
@@ -91,53 +103,54 @@
                 <div class="row">
                     <div class="col-md-3 padding-5px">
                         <a href="#" class="thumbnail seat-number" data-toggle="modal" data-seat-number="2" data-target="#tripContentModal">
-                            <span class="label label-success">2</span>
+                            <span class="label label-default">2</span>
                             <span class="seat-number-2"></span>
                         </a>
                     </div>
                     <div class="col-md-3 padding-5px">
                         <a href="#" class="thumbnail seat-number" data-toggle="modal" data-seat-number="3" data-target="#tripContentModal">
-                            <span class="label label-success">3</span>
+                            <span class="label label-default">3</span>
                             <span class="seat-number-3"></span>
                         </a>
                     </div>
                     <div class="col-md-3 padding-5px">
                         <a href="#" class="thumbnail seat-number" data-toggle="modal" data-seat-number="4" data-target="#tripContentModal">
-                            <span class="label label-success">4</span>
+                            <span class="label label-default">4</span>
                             <span class="seat-number-4"></span>
                         </a>
                     </div>
                     <div class="col-md-3 padding-5px">
                         <a href="#" class="thumbnail seat-number" data-toggle="modal" data-seat-number="5" data-target="#tripContentModal">
-                            <span class="label label-success">5</span>
+                            <span class="label label-default">5</span>
                             <span class="seat-number-5"></span>
                         </a>
                     </div>
                 </div>
-            
+
                 <div class="row">
                     <div class="col-md-3 padding-5px">
                         <a href="#" class="thumbnail seat-number" data-toggle="modal" data-seat-number="6" data-target="#tripContentModal">
-                            <span class="label label-success">6</span>
+                            <span class="label label-default">6</span>
                             <span class="seat-number-6"></span>
                         </a>
                     </div>
                     <div class="col-md-3 padding-5px">
                         <a href="#" class="thumbnail seat-number" data-toggle="modal" data-seat-number="7" data-target="#tripContentModal">
-                            <span class="label label-success">7</span>
+                            <span class="label label-default">7</span>
                             <span class="seat-number-7"></span>
                         </a>
                     </div>
                     <div class="col-md-3 padding-5px">
                         <a href="#" class="thumbnail seat-number" data-toggle="modal" data-seat-number="8" data-target="#tripContentModal">
-                            <span class="label label-success">8</span>
+                            <span class="label label-default">8</span>
                             <span class="seat-number-8"></span>
                         </a>
                     </div>
                     <div class="col-md-3 padding-5px">
-                        <a href="#" class="thumbnail seat-number" data-toggle="modal" data-seat-number="0" data-target="#tripContentModal">
-                            <span class="label label-warning">Cửa</span>
-                        </a>
+                        <div class="thumbnail seat-number">
+                            <span class="label label-default">Cửa</span>
+                            <span></span>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -158,24 +171,7 @@
             </div>
             <div class="modal-body">
                 <form class="form-horizontal" role="form">
-                    <div class="form-group">
-                        <label for="DepartureDate" class="col-sm-3 control-label">Ngày</label>
-                        <div class="col-sm-9">
-                            <input type="text" class="form-control" id="DepartureDate" name="DepartureDate" placeholder="Ngày" disabled>
-                        </div>
-                    </div>
-                    <div class="form-group">
-                        <label for="DepartureTime" class="col-sm-3 control-label">Chuyến</label>
-                        <div class="col-sm-9">
-                            <input type="text" class="form-control" id="DepartureTime" name="DepartureTime" placeholder="Giờ" disabled>
-                        </div>
-                    </div>
-                    <div class="form-group">
-                        <label for="SeatNumber" class="col-sm-3 control-label">Số ghế</label>
-                        <div class="col-sm-9">
-                            <input type="text" class="form-control" id="SeatNumber" name="SeatNumber" placeholder="Số ghế" disabled>
-                        </div>
-                    </div>
+                    <input type="hidden" id="Id" name="Id"/>
                     <div class="form-group">
                         <label for="Name" class="col-sm-3 control-label">Tên hành khách</label>
                         <div class="col-sm-9">
@@ -195,6 +191,17 @@
                         </div>
                     </div>
                     <div class="form-group">
+                        <label for="Town" class="col-sm-3 control-label">Khu vực</label>
+                        <div class="col-sm-9">
+                            <select class="form-control" id="Town" name="Town">
+                                @foreach (var item in townSelectList)
+                                {
+                                    <option value="@item.Value">@item.Text</option>
+                                }
+                            </select>
+                        </div>
+                    </div>
+                    <div class="form-group">
                         <label for="TicketQuantity" class="col-sm-3 control-label">Số lượng vé</label>
                         <div class="col-sm-9">
                             <input type="number" class="form-control" id="TicketQuantity" name="TicketQuantity" placeholder="Số lượng vé">
@@ -204,6 +211,24 @@
                         <label for="Note" class="col-sm-3 control-label">Ghi chú</label>
                         <div class="col-sm-9">
                             <textarea class="form-control" id="Note" name="Note" placeholder="Ghi chú"></textarea>
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <label for="DepartureDate" class="col-sm-3 control-label">Ngày</label>
+                        <div class="col-sm-9">
+                            <input type="text" class="form-control" id="DepartureDate" name="DepartureDate" placeholder="Ngày" disabled>
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <label for="DepartureTime" class="col-sm-3 control-label">Chuyến</label>
+                        <div class="col-sm-9">
+                            <input type="text" class="form-control" id="DepartureTime" name="DepartureTime" placeholder="Giờ" disabled>
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <label for="SeatNumber" class="col-sm-3 control-label">Số ghế</label>
+                        <div class="col-sm-9">
+                            <input type="text" class="form-control" id="SeatNumber" name="SeatNumber" placeholder="Số ghế" disabled>
                         </div>
                     </div>
                 </form>
